--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ nav a {
     text-decoration: none;
 }
 .hero {
-    background: url('images/alphard.jpg') no-repeat center center/cover;
+    background: url('images/logo2.png') no-repeat center center/cover;
     color: white;
     text-align: center;
     padding: 100px 20px;
