--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ nav a {
 }
 .hero {
     background: url('images/logo2.png') no-repeat center center/cover;
-    color: white;
+    color: blue;
     text-align: center;
     padding: 100px 20px;
 }
