--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ header {
     padding: 10px 20px;
 }
 header .logo {
-    height: 50px;
+    height: 100px;
 }
 nav a {
     color: yellow;
@@ -22,7 +22,7 @@ nav a {
 }
 .hero {
     background: url('images/logo2.png') no-repeat center center/cover;
-    color: blue;
+    color: white;
     text-align: center;
     padding: 100px 20px;
 }
